--- a/.github/workflows/ui-pipeline.yml
+++ b/.github/workflows/ui-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build React app
+      - name: Build
         run: npm run build
 
       - name: Upload production-ready build
