--- a/.github/workflows/ui-pipeline.yml
+++ b/.github/workflows/ui-pipeline.yml
@@ -10,7 +10,19 @@ on:
       - master           # Also runs when a PR targets master
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          
+      - run: npm install
+      - run: npm run lint
+
   build:
+    needs: lint
     name: Build React App
     runs-on: ubuntu-latest
 
